--- a/plugins/code-syntax-highlight/src/css/plugin.css
+++ b/plugins/code-syntax-highlight/src/css/plugin.css
@@ -110,7 +110,6 @@
   background-color: #f4f7f8;
 }
 
-
 .toastui-editor-dark .toastui-editor-code-block-language-input input::placeholder {
   color: #eee;
 }
@@ -118,36 +117,40 @@
 .toastui-editor-dark .toastui-editor-ww-code-block-highlighting:after {
   background-color: #232428;
   border: 1px solid #393b42;
-  color: #aaa;
+  color: #eee;
   background-image: url("data:image/svg+xml;utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='10' viewBox='0 0 10 10'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23fff'%3E%3Cg%3E%3Cg%3E%3Cg%3E%3Cpath d='M5.5 2.5l2 2L2 10H0V8l5.5-5.5zM8 0l2 2-1.5 1.5-2-2L8 0z' transform='translate(-940 -712) translate(60 647) translate(875 60) translate(5 5)'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
-.toastui-editor-dark.toastui-editor-code-block-language span {
+.toastui-editor-dark .toastui-editor-code-block-language span {
   border: 1px solid #494c56;
   background-color: #121212;
 }
 
-.toastui-editor-dark.toastui-editor-code-block-language input {
+.toastui-editor-dark .toastui-editor-code-block-language input {
   background-color: #121212;
   color: #eee;
 }
 
-.toastui-editor-dark.toastui-editor-code-block-language-list {
+.toastui-editor-dark .toastui-editor-code-block-language-list {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.08);
   border: 1px solid #494c56;
   border-radius: 2px;
 }
 
-.toastui-editor-dark.toastui-editor-code-block-language-list button {
+.toastui-editor-dark .toastui-editor-code-block-language-list button {
   color: #eee;
   background-color: #121212;
 }
 
-.toastui-editor-dark.toastui-editor-code-block-language-list button:hover {
+.toastui-editor-dark .toastui-editor-code-block-language-list button.active {
+  color: #4b96e6;
+}
+
+.toastui-editor-dark .toastui-editor-code-block-language-list button:hover {
   background-color: #36383f;
 }
 
-.toastui-editor-dark.toastui-editor-code-block-language .toastui-editor-code-block-language-input::after {
+.toastui-editor-dark .toastui-editor-code-block-language .toastui-editor-code-block-language-input::after {
   content: url("data:image/svg+xml;utf8,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3C!-- Generator: Adobe Illustrator 25.2.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) --%3E%3Csvg version='1.1' id='레이어_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 12 14' style='enable-background:new 0 0 12 14;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill-rule:evenodd;clip-rule:evenodd;fill:%23fff;%7D%0A%3C/style%3E%3Cdesc%3ECreated with sketchtool.%3C/desc%3E%3Cg id='Symbols'%3E%3Cg id='com-trangle-up-side'%3E%3Cpolygon id='Rectangle-7' class='st0' points='2,9 10,9 6,4 '/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
 }
 
