chore: apply code review

--- a/apps/editor/src/css/dark/contents.css
+++ b/apps/editor/src/css/dark/contents.css
@@ -132,7 +132,7 @@
 }
 
 .toastui-editor-dark .toastui-editor-contents ul > li::before {
-  background-color: #55575f;;
+  background-color: #55575f;
 }
 
 .toastui-editor-dark .toastui-editor-contents hr {
