fix: fix issue where focus by mouse click can be only done by clicking the text or the first row
fix #1762

--- a/apps/editor/src/css/editor.css
+++ b/apps/editor/src/css/editor.css
@@ -50,6 +50,11 @@
   position: relative;
 }
 
+.toastui-editor > div {
+  height: inherit;
+  min-height: inherit;
+}
+
 .toastui-editor-md-container .toastui-editor,
 .toastui-editor-md-container .toastui-editor-md-preview {
   box-sizing: border-box;
