--- a/apps/editor/src/css/editor.css
+++ b/apps/editor/src/css/editor.css
@@ -403,7 +403,6 @@
 
 .toastui-editor-dropdown-toolbar {
   position: absolute;
-  height: 46px;
   z-index: 30;
   border-radius: 2px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.08);
@@ -411,6 +410,7 @@
   background-color: #f7f9fc;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .toastui-editor-toolbar-item-wrapper {
